--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
-    "pocketbase": "^0.25.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
