--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/postcss-js": "^4.0.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
+    "postcss-js": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
