--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^4.1.3",
     "@supabase/supabase-js": "^2.49.1",
     "@types/postcss-js": "^4.0.4",
+    "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
     "postcss-js": "^4.0.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
